<resources>
    <string name="app_name">MerchantX</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="sign_in">sign_in</string>
    <string name="lost_password">lost_password</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="log_out">Log out</string>
    <string name="help">Help</string>
    <string name="other">Other</string>
    <string name="usa">USA</string>
    <string name="russian">Russian</string>
    <string name="armenian">Armenian</string>
    <string name="languages">Languages</string>
    <string name="unpaid">Unpaid</string>
    <string name="paid">Paid</string>
    <string name="transactions">Transactions</string>
    <string name="reversed">Reversed</string>
    <string name="all">All</string>
    <string name="phone">Phone</string>
    <string name="sand_sms">sand sms</string>
    <string name="share">Share</string>
    <string name="amd">AMD</string>
    <string name="amount">amount</string>
    <string name="comment">comment</string>
    <string name="generate_qr">Generate QR</string>
    <string name="pleas_login">Pleas login</string>
    <string name="create_data">create data</string>
    <string name="pay_data">pay data</string>
    <string name="department">Department</string>
    <string name="authorization">authorization code</string>
    <string name="payer_app">Payer app</string>
    <string name="card_type">Card type</string>
    <string name="payment_type">Payment type</string>
</resources>