<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_10"
    android:weightSum="8"
    tools:context=".fragments.ShareFragment">


    <ImageView
        android:src="@drawable/pay_x_logo"
        android:layout_weight="3"
        android:layout_margin="@dimen/margin_10"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <TextView
        android:text="xndrum em mutqagreq heraxosahamar@"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">


        <Button
            android:id="@+id/btn_sand_sms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_10"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:text="@string/sand_sms" />

        <Button
            android:id="@+id/btn_share"
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_10"
            android:layout_weight="1"
            android:text="@string/share" />
    </LinearLayout>

</LinearLayout>