<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">


        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_32"
            android:layout_weight="1"
            android:src="@drawable/pay_x_logo" />


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/tv_info_h_v_h_h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32"
                android:layout_marginEnd="@dimen/margin_32"
                android:hint="@string/amount"
                android:inputType="number"
                android:maxLength="10" />

            <EditText
                android:id="@+id/et_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_32"
                android:hint="@string/comment"
                android:inputType="text" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_margin="@dimen/margin_32"
            android:orientation="horizontal"
            android:weightSum="2"
            tools:ignore="NestedWeights">


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_generate_qr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:elevation="@dimen/margin_10"
                app:cardCornerRadius="12dp"
                tools:ignore="NestedWeights">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_10"
                        android:gravity="top"
                        android:maxLines="1"
                        android:text="@string/generate_qr"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/qr" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_share"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:elevation="@dimen/margin_10"
                app:cardCornerRadius="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/margin_10"
                        android:gravity="center_horizontal"
                        android:maxLines="1"
                        android:text="@string/share"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_share_24" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </LinearLayout>

</LinearLayout>